--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<title>Pink Gallery</title>
-	<link rel="stylesheet" href="css/gallery.css">
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>Pink Gallery</h1>
@@ -22,6 +22,6 @@
 	<img class = "preview" tabindex ="0" alt = "Coffee" src = "https://images.unsplash.com/photo-1528696892704-5e1122852276?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3NzA0NjgzODR8&ixlib=rb-4.1.0&q=85" onmouseover = "upDate(this)" onmouseout = "unDo()">
   <img class = "preview" tabindex ="0" alt = "Pink bricks" src = "https://images.unsplash.com/photo-1545231160-e7ef23d9301f?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3NzA0NjgzODR8&ixlib=rb-4.1.0&q=85" onmouseover = "upDate(this)" onmouseout = "unDo()">
   </div>
-  <script src = "js/gallery.js"></script>
+  <script src = "script.js"></script>
 </body>
 </html>
