--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </div>
   <script src = "script.js"></script>
 	<footer>
-    <p>interactivity with javascript | @kyedrafts</p>
+    <p>interactivity with javascript</p>
     </footer>
 </body>
 </html>
